force-app/main/default/objects/locobuzz__Social_Persona__c/locobuzz__Social_Persona__c.object-meta.xml
<CustomObject>
    <label>Social Persona</label>
    <nameField>
        <label>Social Persona Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Social Personas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>