force-app/main/default/objects/locobuzz__Social_Persona__c/fields/locobuzz__Bio__c.field-meta.xml
<CustomField>
    <fullName>locobuzz__Bio__c</fullName>
    <label>Bio</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>