force-app/main/default/objects/locobuzz__Social_Persona__c/fields/locobuzz__Email__c.field-meta.xml
<CustomField>
    <fullName>locobuzz__Email__c</fullName>
    <label>Email</label>
    <type>Email</type>
</CustomField>