force-app/main/default/objects/locobuzz__Social_Persona__c/fields/locobuzz__External_Id__c.field-meta.xml
<CustomField>
    <fullName>locobuzz__External_Id__c</fullName>
    <label>Social Persona Provider External Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>