force-app/main/default/objects/locobuzz__Social_Persona__c/fields/locobuzz__External_Picture_URL__c.field-meta.xml
<CustomField>
    <fullName>locobuzz__External_Picture_URL__c</fullName>
    <label>External Picture URL</label>
    <type>Url</type>
</CustomField>