force-app/main/default/objects/locobuzz__Social_Persona__c/fields/locobuzz__Followers__c.field-meta.xml
<CustomField>
    <fullName>locobuzz__Followers__c</fullName>
    <label>Followers</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>