force-app/main/default/objects/locobuzz__Social_Persona__c/fields/locobuzz__Is_Verified__c.field-meta.xml
<CustomField>
    <fullName>locobuzz__Is_Verified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Verified</label>
    <type>Checkbox</type>
</CustomField>