force-app/main/default/objects/locobuzz__Social_Persona__c/fields/locobuzz__Mobile_Number__c.field-meta.xml
<CustomField>
    <fullName>locobuzz__Mobile_Number__c</fullName>
    <label>Mobile Number</label>
    <type>Phone</type>
</CustomField>