force-app/main/default/objects/locobuzz__Social_Persona__c/fields/locobuzz__Parent_Id__c.field-meta.xml
<CustomField>
    <fullName>locobuzz__Parent_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Id</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Social Personas</relationshipLabel>
    <relationshipName>Social_Personas</relationshipName>
    <type>Lookup</type>
</CustomField>