force-app/main/default/objects/locobuzz__Social_Persona__c/fields/locobuzz__Profile_Url__c.field-meta.xml
<CustomField>
    <fullName>locobuzz__Profile_Url__c</fullName>
    <label>Profile Url</label>
    <type>Url</type>
</CustomField>