force-app/main/default/objects/locobuzz__Social_Persona__c/fields/locobuzz__Real_Name__c.field-meta.xml
<CustomField>
    <fullName>locobuzz__Real_Name__c</fullName>
    <label>Real Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>