force-app/main/default/objects/locobuzz__Social_Persona__c/fields/locobuzz__Social_Network__c.field-meta.xml
<CustomField>
    <fullName>locobuzz__Social_Network__c</fullName>
    <label>Social Network</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>locobuzz__Social_Network_List</valueSetName>
    </valueSet>
</CustomField>