force-app/main/default/objects/locobuzz__Social_Persona__c/fields/Social_Persona_Name__c.field-meta.xml
<CustomField>
    <fullName>Social_Persona_Name__c</fullName>
    <description>Created as std field length can not be increased - Lcocbuzz</description>
    <label>Social Persona Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>