force-app/main/default/objects/locobuzz__Social_Persona__c/listViews/locobuzz__All.listView-meta.xml
<ListView>
    <fullName>locobuzz__All</fullName>
    <columns>NAME</columns>
    <columns>locobuzz__Social_Network__c</columns>
    <columns>locobuzz__Real_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>